@@ -426,6 +426,35 @@ ifdef TRUSTWORDSXORCOMPATIBILITY
 endif
 
 
+######### Engine versioning #########
+
+# It is useful to have these as part of logs, to know exactly which
+# version of the Engine was built.
+PEP_ENGINE_BRANCH = "\"$(shell export LC_ALL=C; \
+                             cd "$(HERE)"; \
+                             if test -d .git && git --help > /dev/null \
+                                                             2> /dev/null; then \
+                                 git branch --show-current; \
+                             fi)\""
+CPPFLAGS += -DPEP_ENGINE_BRANCH=$(PEP_ENGINE_BRANCH)
+
+PEP_ENGINE_COMMIT = "\"$(shell export LC_ALL=C; \
+                             cd "$(HERE)"; \
+                             if test -d .git && git --help > /dev/null \
+                                                           2> /dev/null; then \
+                                 git log -1 | grep '^commit' | awk '{print $$2;}'; \
+                             fi)\""
+CPPFLAGS += -DPEP_ENGINE_COMMIT=$(PEP_ENGINE_COMMIT)
+
+PEP_ENGINE_COMMIT_DATE = "\"$(shell export LC_ALL=C; \
+                                  cd "$(HERE)"; \
+                                  if test -d .git && git --help > /dev/null \
+                                                                2> /dev/null; then \
+                                      git log -1 | grep '^Date:' | sed 's/^Date: *//'; \
+                                  fi)\""
+CPPFLAGS += -DPEP_ENGINE_COMMIT_DATE=$(PEP_ENGINE_COMMIT_DATE)
+
+
 ######### Makefile debugging #########
 
 # We are about to define the target, which (considering that Makefile.conf is
@@ -445,6 +474,7 @@ dump-make-variables:
 	@echo "CPPFLAGS:        $(CPPFLAGS)"
 	@echo "SQLITE3_FROM_OS: $(SQLITE3_FROM_OS)"
 
+
 ######### Banner #########
 
 ifneq ($(wildcard local.conf),)
@@ -459,9 +489,14 @@ export BANNERPRINTED
 ifndef BANNERPRINTED
     BANNERPRINTED := yes
     VERSION=$(shell cat $(HERE)src/pEpEngine_version.h | grep 'PEP_ENGINE_VERSION "' | awk '{print $$3}' | tr '"' ' ')
-    VERSION+=$(shell if test -e .git && git --version > /dev/null 2> /dev/null; then echo "branch '$$(git branch --show-current)'"; fi 2> /dev/null)
+    VERSION+=$(PEP_ENGINE_BRANCH)
+    VERSION+=$(PEP_ENGINE_COMMIT)
+    VERSION+=$(PEP_ENGINE_DATE)
     $(info ================================================)
     $(info Building p≡p Engine $(VERSION))
+    $(info branch $(ENGINEBRANCH))
+    $(info commit $(ENGINECOMMIT))
+    $(info commit date $(ENGINEDATE))
     $(info Safety mode '$(DEBUG)')
     $(info Maximum log level '$(MAXLOGLEVEL)')
     $(info Log desinations '$(LOGDESTINATIONS)')
